--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "watch": "webpack --watch",
+    "demo": "yarn prod:build && webpack && npx http-server ./sample/",
     "prod:build": "tsc -p tsconfig.release.json"
   },
   "dependencies": {
@@ -30,6 +30,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^25.2.2",
     "html-webpack-plugin": "^5.5.0",
+    "http-server": "^14.0.0",
     "jest": "^27.2.4",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "path-browserify": "^1.0.1",
